# kv

./: .gitignore  .gitmodules  CMakeLists.txt  PROTOCOLS  README.md
client/: CMakeLists.txt  main.c
include/: kv.h  packet.c  packet.h
server/: CMakeLists.txt  channel.c  channel.h  main.c  tcp.c  tcp.h
